--- a/AOP-Aspectj-CTW/pom.xml
+++ b/AOP-Aspectj-CTW/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>my-aop</artifactId>
+    <artifactId>aop-aspectj-ctw</artifactId>
 
     <name>AOP Maven Webapp</name>
     <url>http://maven.apache.org</url>
@@ -91,7 +91,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
-                <version>1.15.0</version>
+                <version>1.14.0</version>
 <!--                <version>1.14.0</version>-->
                 <executions>
                     <execution>
@@ -122,7 +122,6 @@
                 </dependencies>
             </plugin>
         </plugins>
-
     </build>
 </project>
 
