--- a/AOP-Aspectj-CTW/pom.xml
+++ b/AOP-Aspectj-CTW/pom.xml
@@ -68,61 +68,85 @@
     </dependencies>
     <build>
         <plugins>
-<!--            &lt;!&ndash; Maven Surefire Plugin for tests &ndash;&gt;-->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-surefire-plugin</artifactId>-->
-<!--                <version>3.5.2</version>-->
-<!--                <configuration>-->
-<!--                    <argLine>-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.20/aspectjweaver-1.9.20.jar"</argLine>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
-
-<!--            &lt;!&ndash; Maven Compiler Plugin &ndash;&gt;-->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-compiler-plugin</artifactId>-->
-<!--                <version>3.11.0</version>-->
-<!--                <configuration>-->
-<!--                    <source>21</source> &lt;!&ndash; Adjust for your Java version &ndash;&gt;-->
-<!--                    <target>21</target>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>11</source> <!-- Adjust for your Java version -->
+                    <target>11</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.24</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>default-compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
                 <version>1.14.0</version>
-<!--                <version>1.14.0</version>-->
                 <executions>
                     <execution>
+                        <phase>process-classes</phase>
                         <goals>
                             <goal>compile</goal>
-                            <goal>test-compile</goal>
+<!--                            <goal>test-compile</goal>-->
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
+
                     <complianceLevel>11</complianceLevel>
                     <source>11</source>
                     <target>11</target>
                     <verbose>true</verbose>
                     <showWeaveInfo>true</showWeaveInfo>
+                    <forceAjcCompile>true</forceAjcCompile>
+                    <weaveDirectories>
+                        <weaveDirectory>${project.build.outputDirectory}</weaveDirectory>
+<!--                        <weaveDirectory>${project.build.directory}/classes</weaveDirectory>-->
+                    </weaveDirectories>
+                    <includes>
+                        <include>**/*.class</include> <!-- Include all class files -->
+                    </includes>
+                    <excludes>
+                        <exclude>**/*lombok*.class</exclude> <!-- Exclude Lombok-generated files -->
+                    </excludes>
                 </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.aspectj</groupId>
                         <artifactId>aspectjtools</artifactId>
-                        <version>1.9.20</version> <!-- Replace with the latest version -->
+                        <version>1.9.20</version>
                     </dependency>
                     <dependency>
                         <groupId>org.aspectj</groupId>
                         <artifactId>aspectjweaver</artifactId>
-                        <version>1.9.20</version> <!-- Replace with the latest version -->
+                        <version>1.9.20</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.projectlombok</groupId>
+                        <artifactId>lombok</artifactId>
+                        <version>1.18.24</version>
                     </dependency>
                 </dependencies>
             </plugin>
+
         </plugins>
     </build>
+
 </project>
 
 
