--- a/AOP-Aspectj-CTW/pom.xml
+++ b/AOP-Aspectj-CTW/pom.xml
@@ -1,23 +1,35 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.6.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
+    <!-- lookup parent from repository -->
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>aop-aspectj-ctw</artifactId>
-
     <name>AOP Maven Webapp</name>
     <url>http://maven.apache.org</url>
 
     <properties>
+        <aspectj-maven-plugin.version>1.14.0</aspectj-maven-plugin.version>
         <aspectj.version>1.9.20</aspectj.version>
+        <aspectjtools.version>1.9.20</aspectjtools.version>
+        <aspectjweaver.version>1.9.20</aspectjweaver.version>
+        <jackson-core.version>2.14.1</jackson-core.version>
+        <lombok.version>1.18.24</lombok.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson-core.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
@@ -32,54 +44,51 @@
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>${aspectj.version}</version> <!-- Use the latest version -->
+            <version>${aspectj.version}</version>
+        </dependency>
+        <!-- Use the latest version -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.22</version>
-            <scope>provided</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.24</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.14.1</version>
-        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>11</source> <!-- Adjust for your Java version -->
-                    <target>11</target>
+                    <source>17</source>
+                    <!-- Adjust for your Java version -->
+                    <target>17</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>1.18.24</version>
+                            <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
@@ -96,57 +105,54 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
-                <version>1.14.0</version>
+                <version>${aspectj-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <phase>process-classes</phase>
                         <goals>
                             <goal>compile</goal>
-<!--                            <goal>test-compile</goal>-->
                         </goals>
                     </execution>
                 </executions>
+                <!--                            <goal>test-compile</goal>-->
                 <configuration>
-
-                    <complianceLevel>11</complianceLevel>
-                    <source>11</source>
-                    <target>11</target>
+                    <complianceLevel>17</complianceLevel>
+                    <source>17</source>
+                    <target>17</target>
                     <verbose>true</verbose>
                     <showWeaveInfo>true</showWeaveInfo>
                     <forceAjcCompile>true</forceAjcCompile>
                     <weaveDirectories>
                         <weaveDirectory>${project.build.outputDirectory}</weaveDirectory>
-<!--                        <weaveDirectory>${project.build.directory}/classes</weaveDirectory>-->
                     </weaveDirectories>
+                    <!--                        <weaveDirectory>${project.build.directory}/classes</weaveDirectory>-->
                     <includes>
-                        <include>**/*.class</include> <!-- Include all class files -->
+                        <include>**/*.class</include>
                     </includes>
+                    <!-- Include all class files -->
                     <excludes>
-                        <exclude>**/*lombok*.class</exclude> <!-- Exclude Lombok-generated files -->
+                        <exclude>**/*lombok*.class</exclude>
                     </excludes>
                 </configuration>
+                <!-- Exclude Lombok-generated files -->
                 <dependencies>
                     <dependency>
                         <groupId>org.aspectj</groupId>
                         <artifactId>aspectjtools</artifactId>
-                        <version>1.9.20</version>
+                        <version>${aspectjtools.version}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.aspectj</groupId>
                         <artifactId>aspectjweaver</artifactId>
-                        <version>1.9.20</version>
+                        <version>${aspectjweaver.version}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.projectlombok</groupId>
                         <artifactId>lombok</artifactId>
-                        <version>1.18.24</version>
+                        <version>${lombok.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
-
         </plugins>
     </build>
-
 </project>
-
-
